add roast detail
